test/scc/expr/semantic-errors/111.a
111.t:11:9: error: incompatible type for argument 1 in function call